src/components/Contact.css
.contact-body {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact-row {
    height: 92.5vh;
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

div.left-content {
    background-image: url('../assets/contactpicture.svg');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center top;
    height: 100%;
}

div.right-content {
    display: flex;
    justify-content: flex-start;
    padding-left: 0;
    margin: 0;
}

.form-container {
    margin: 0;
    border-radius: 2vh;
    height: 80vh;
    width: 35vw;
    padding-top: 5vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

div.title-row {
    text-align: center;
    margin-bottom: 2vh;
    color: var(--accent-color);
}

div.title-row h2 {
    font-size: 3.5vh;
}

input.form-input, textarea.form-input {
    height: 5vh;
    width: 25vw;
    font-size: 1.75vh;
    padding: 0.5em;
    margin-bottom: 2vh;
    border-radius: 0.75vh;
    border: none;
    border-bottom: 1.5px solid rgba(0, 0, 0, 0.3);
    background: #e4e2b8;;
}

textarea.form-input {
    min-height: 25vh;
    max-height: 40vh;
}

.contact-button-row {
    display: flex;
    justify-content: center;
    align-items: center;
}

.send-button {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--accent-color);
    color: var(--highlight);
    border: none;
    border-radius: 1vh;
    padding: .25em 1em;
    width: 15vw;
    height: 5vh;
    font-size: 2vh;
    box-shadow: 0 0.25vh 0.5vh rgba(0, 0, 0, 0.3);
    transition: all 0.2s;
}

.send-button:hover {
    background-color: var(--accent-hover);
    box-shadow: 0 0.35vh 0.35vh rgba(0, 0, 0, 0.3);
    border: 0.25vh solid;
}

.btn-txt {
    display: inline-flex;
}

.loading-icon {
    display: inline-flex;

    min-height: 23px;
    min-width: 23px;

    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    background-image: url("../assets/loadingicon.svg");

    margin-left: 5px;

    animation: rotation 1.5s infinite linear;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to{
        transform: rotate(359deg);
    }
}

.success-message, .error-message {
    display: flex;
    box-shadow: 0 0.35vh 0.35vh rgba(0, 0, 0, 0.3);
    border-radius: 0.75vh;
    margin-bottom: 1vh;
    padding: 1vh;
    width: 100%;
    font-size: 1.75vh;
}

.success-message {
    background-color: #8ceba2;
    color:rgb(36, 85, 47);
    border: 1px solid rgba(36, 85, 47, 0.3);
}

.error-message {
    background-color: #eb8c8c;
    color:rgb(85, 36, 36);
    border: 1px solid rgba(85, 36, 36, 0.3);
}

.message-text {
    width: 90%;
    padding-left: 0.75vw;
}

.close-message {
    background: none;
    border: none;
}

@media only screen and (max-width: 1000px) {
    .form-container {
        width: 50vw;
    }

    input.form-input, textarea.form-input {
        width: 40vw;
     }

     div.left-content {
        display: none;
     }
}

@media only screen and (max-width: 767px) {
    .contact-row {
        align-items: flex-start;
    }
    
    .form-container {
        width: 90vw;
    }

    input.form-input, textarea.form-input {
        width: 80vw;
        padding: 0.5em;
        margin-bottom: 3vh;
    }

    div.right-content {
        justify-content: center;
        padding: 0;
    }

    .send-button {
        width: 40vw;
        height: 7vh;
        font-size: 2.5vh;
    }

} 

